_scratch/services/pihole/pihole-01-ns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "pihole"
  labels:
    type: "local"
