_scratch/services/pihole/pihole-05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pihole
  name: pihole-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: pihole.172.30.1.10.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pihole-web
            port:
              number: 80
